@@ -5,6 +5,8 @@ import org.slf4j.LoggerFactory;
 
 import java.io.*;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -12,6 +14,7 @@ import java.util.stream.IntStream;
 
 public class GeneSetEnrichmentAnalysis {
     private static final Logger log = LoggerFactory.getLogger(GeneSetEnrichmentAnalysis.class);
+    private final ConcurrentMap<GOTerm, HashMap<GOTerm, Integer>> globalAncestorCache = new ConcurrentHashMap<>();
     int numDiffExpressedRootGenes;
     int numDiffExpressedSigRootGenes;
     private DAG graph;
@@ -28,6 +31,7 @@ public class GeneSetEnrichmentAnalysis {
     public GeneSetEnrichmentAnalysis(RootType rootType) {
     }
 
+
     private GeneSetEnrichmentAnalysis(Builder builder) {
         rootType = builder.rootType;
         minSize = builder.minSize;
@@ -41,19 +45,11 @@ public class GeneSetEnrichmentAnalysis {
         }
     }
 
-    /**
-     * Applies the Benjamini–Hochberg correction on a list of entries.
-     *
-     * @param entries      The list of entries to adjust.
-     * @param pValueGetter A function that extracts the raw p-value from an entry.
-     * @param fdrSetter    A consumer that sets the corrected FDR value on an entry.
-     * @param <T>          The type of the entries (e.g., GOAnalysisEntry).
-     */
     public static <T> void applyBenjaminiHochbergCorrection(List<T> entries, Function<T, Double> pValueGetter, BiConsumer<T, Double> fdrSetter) {
         int m = entries.size();
 
         // Sort the entries in ascending order based on the extracted p-value.
-        List<T> sortedEntries = entries.stream().sorted(Comparator.comparingDouble(pValueGetter::apply)).collect(Collectors.toList());
+        List<T> sortedEntries = entries.stream().sorted(Comparator.comparingDouble(pValueGetter::apply)).toList();
 
         double[] adjustedFDR = new double[m];
 
@@ -66,7 +62,7 @@ public class GeneSetEnrichmentAnalysis {
             if (i == m - 1) {
                 adjustedFDR[i] = bhValue;
             } else {
-                // Ensure monotonicity by taking the minimum with the previously computed value.
+                // take min
                 adjustedFDR[i] = Math.min(bhValue, adjustedFDR[i + 1]);
             }
         }
@@ -178,11 +174,8 @@ public class GeneSetEnrichmentAnalysis {
     public List<GOAnalysisEntry> performEnrichment() {
         long start = System.currentTimeMillis();
         calcNumDiffExpressedRootGenes(graph, differentialExpressionInput);
-        // Replace with the actual transformation logic
-        List<GOAnalysisEntry> analysisEntries = graph.getEntries().values().parallelStream().filter(goTerm -> minSize <= goTerm.getAssociatedGenes().size() && goTerm.getAssociatedGenes().size() <= maxSize).map(this::analyzeGOEntry).sorted(Comparator.comparingInt(GOAnalysisEntry::getId)).collect(Collectors.toList());
-        // calciulated basic encirhcment statistics in
+        List<GOAnalysisEntry> analysisEntries = graph.getEntries().values().parallelStream().filter(goTerm -> minSize <= goTerm.getAssociatedGenes().size() && goTerm.getAssociatedGenes().size() <= maxSize).map(this::analyzeGOEntry).collect(Collectors.toList());
         log.info("Calculated basic enrichment statistics in {} ms", System.currentTimeMillis() - start);
-        // Do BH for each p-value
         start = System.currentTimeMillis();
         correctPValues(analysisEntries);
         log.info("Adjusted p-values in {} ms", System.currentTimeMillis() - start);
@@ -203,16 +196,13 @@ public class GeneSetEnrichmentAnalysis {
 
     }
 
-    // This method should be implemented to create a GOAnalysisEntry from a GOTerm
     private GOAnalysisEntry analyzeGOEntry(GOTerm goTerm) {
-        // Process the GO term to generate a GOAnalysisEntry
         GOAnalysisEntry entry = new GOAnalysisEntry(goTerm);
-        // calculate size
         entry.calculateSize(graph, differentialExpressionInput);
         entry.calculatehg_pvalue(numDiffExpressedRootGenes, numDiffExpressedSigRootGenes, goTerm);
         entry.calculatefej_pvalue(numDiffExpressedRootGenes, numDiffExpressedSigRootGenes, goTerm);
         entry.calculateKS(graph, differentialExpressionInput);
-        entry.calculateShortestPathToTrue(SOTterms, graph, goTerm);
+        entry.calculateShortestPathToTrue(SOTterms, goTerm);
         return entry;
     }
 
@@ -231,23 +221,20 @@ public class GeneSetEnrichmentAnalysis {
         log.info("Output written in {} ms", System.currentTimeMillis() - start);
     }
 
-
     public void performOverlapAnalysis() {
         long start = System.currentTimeMillis();
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(overlapOut))) {
             writer.write("term1\tterm2\tis_relative\tpath_length\tnum_overlapping\tmax_ov_percent");
             // Retrieve and filter GOTerm objects based on the number of associated genes.
-            List<GOTerm> filteredTerms = graph.getEntries().values().stream()
-                    .filter(goTerm -> minSize <= goTerm.getAssociatedGenes().size() &&
-                            goTerm.getAssociatedGenes().size() <= maxSize)
-                    .toList();
+            List<GOTerm> filteredTerms = graph.getEntries().values().stream().filter(goTerm -> minSize <= goTerm.getAssociatedGenes().size() && goTerm.getAssociatedGenes().size() <= maxSize).toList();
 
-            // Process unique pairs in parallel using an index-based parallel stream.
+            // Process unique pairs
             IntStream.range(0, filteredTerms.size()).parallel().forEach(i -> {
                 for (int j = i + 1; j < filteredTerms.size(); j++) {
                     // Check if there is an overlap between the two GO terms.
                     int numSharedGenes = 0;
-                    for (String gene : filteredTerms.get(i).getAssociatedGenes()) {
+                    Set<String> associatedGenes = filteredTerms.get(i).getAssociatedGenes();
+                    for (String gene : associatedGenes) {
                         if (filteredTerms.get(j).getAssociatedGenes().contains(gene)) {
                             numSharedGenes++;
                         }
@@ -284,67 +271,56 @@ public class GeneSetEnrichmentAnalysis {
      * For each common ancestor, adding the two distances yields a candidate path length (the sum of the upward moves from each term to that common ancestor).
      * The minimal sum over all common ancestors is taken as the shortest path length between the two terms.
      * This method is efficient because it only explores the typically small set of ancestors rather than the entire graph.
+     * Comment by ChatGPT
      */
     private String processOverlapPair(GOTerm goTerm1, GOTerm goTerm2, int numSharedGenes) {
-        // Create a local cache that will store ancestor maps for this pair.
-        Map<GOTerm, HashMap<GOTerm, Integer>> localCache = new HashMap<>();
-
-        // Compute the shortest valid path length using the upward-only search with caching.
-        int pathLength = computeShortestPath(goTerm1, goTerm2, localCache);
-
-        // Determine whether one term is an ancestor (or descendant) of the other.
-        boolean isRel = isRelative(goTerm1, goTerm2, localCache);
-
-        double maxOvPercent = (double) numSharedGenes /
-                Math.min(goTerm1.getAssociatedGenes().size(), goTerm2.getAssociatedGenes().size()) * 100;
-
-        return "GO:" + goTerm1.getFullID() + "\t" +
-                "GO:" + goTerm2.getFullID() + "\t" +
-                isRel + "\t" +
-                pathLength + "\t" +
-                numSharedGenes + "\t" +
-                maxOvPercent;
+        int pathLength = computeShortestPath(goTerm1, goTerm2);
+        boolean isRel = isRelative(goTerm1, goTerm2);
+        double maxOvPercent = (double) numSharedGenes / Math.min(goTerm1.getAssociatedGenes().size(), goTerm2.getAssociatedGenes().size()) * 100;
+        return "GO:" + goTerm1.getFullID() + "\t" + "GO:" + goTerm2.getFullID() + "\t" + isRel + "\t" + pathLength + "\t" + numSharedGenes + "\t" + maxOvPercent;
     }
 
     /**
+     * @param term
+     * @return returns a map from each visited ancestor to its distance (number of upward moves).
      * Computes and caches the set of ancestors for a given term (using only parent links)
      * and returns a map from each visited ancestor to its distance (number of upward moves)
      * from the start term. The cache is used only within one call to processOverlapPair.
      */
-    private HashMap<GOTerm, Integer> computeAncestors(GOTerm term, Map<GOTerm, HashMap<GOTerm, Integer>> localCache) {
-        if (localCache.containsKey(term)) {
-            return localCache.get(term);
-        }
-        HashMap<GOTerm, Integer> distanceMap = new HashMap<>();
-        Deque<GOTerm> queue = new ArrayDeque<>();
-        distanceMap.put(term, 0);
-        queue.add(term);
-
-        while (!queue.isEmpty()) {
-            GOTerm current = queue.poll();
-            int currentDistance = distanceMap.get(current);
-            for (GOTerm parent : current.getParents()) {
-                if (!distanceMap.containsKey(parent)) {
-                    distanceMap.put(parent, currentDistance + 1);
-                    queue.add(parent);
+    private HashMap<GOTerm, Integer> computeAncestors(GOTerm term) {
+        // computeIfAbsent ensures that for a given term only one thread computes its ancestors.
+        return globalAncestorCache.computeIfAbsent(term, t -> {
+            HashMap<GOTerm, Integer> distanceMap = new HashMap<>();
+            Deque<GOTerm> queue = new ArrayDeque<>();
+            distanceMap.put(t, 0);
+            queue.add(t);
+            while (!queue.isEmpty()) {
+                GOTerm current = queue.poll();
+                int currentDistance = distanceMap.get(current);
+                for (GOTerm parent : current.getParents()) {
+                    if (!distanceMap.containsKey(parent)) {
+                        distanceMap.put(parent, currentDistance + 1);
+                        queue.add(parent);
+                    }
                 }
             }
-        }
-        localCache.put(term, distanceMap);
-        return distanceMap;
+            return distanceMap;
+        });
     }
 
     /**
+     * @param term1
+     * @param term2
+     * @return minTotalDistance -> the shortest path length between two terms, -1 if no common ancestor is found
      * Computes the shortest path length (number of edges) between two terms
      * by computing their ancestor maps (using parent links only) and then finding a common
      * ancestor with the minimal total distance.
      * Returns -1 if no common ancestor is found.
      */
-    private int computeShortestPath(GOTerm term1, GOTerm term2, Map<GOTerm, HashMap<GOTerm, Integer>> localCache) {
-        HashMap<GOTerm, Integer> ancestors1 = computeAncestors(term1, localCache);
-        HashMap<GOTerm, Integer> ancestors2 = computeAncestors(term2, localCache);
+    private int computeShortestPath(GOTerm term1, GOTerm term2) {
+        HashMap<GOTerm, Integer> ancestors1 = computeAncestors(term1);
+        HashMap<GOTerm, Integer> ancestors2 = computeAncestors(term2);
         int minTotalDistance = Integer.MAX_VALUE;
-
         for (Map.Entry<GOTerm, Integer> entry : ancestors1.entrySet()) {
             GOTerm ancestor = entry.getKey();
             if (ancestors2.containsKey(ancestor)) {
@@ -352,22 +328,16 @@ public class GeneSetEnrichmentAnalysis {
                 minTotalDistance = Math.min(minTotalDistance, totalDistance);
             }
         }
-
         return (minTotalDistance == Integer.MAX_VALUE) ? -1 : minTotalDistance;
     }
 
-    /**
-     * Determines whether two terms are relatives.
-     * They are considered relatives if one is an ancestor (or descendant) of the other.
-     */
-    private boolean isRelative(GOTerm term1, GOTerm term2, Map<GOTerm, HashMap<GOTerm, Integer>> localCache) {
-        // Check if term2 is an ancestor of term1.
-        HashMap<GOTerm, Integer> ancestors1 = computeAncestors(term1, localCache);
+    private boolean isRelative(GOTerm term1, GOTerm term2) {
+        // Relative if one is an ancestor of the other
+        HashMap<GOTerm, Integer> ancestors1 = computeAncestors(term1);
         if (ancestors1.containsKey(term2)) {
             return true;
         }
-        // Otherwise, check if term1 is an ancestor of term2.
-        HashMap<GOTerm, Integer> ancestors2 = computeAncestors(term2, localCache);
+        HashMap<GOTerm, Integer> ancestors2 = computeAncestors(term2);
         return ancestors2.containsKey(term1);
     }
 
@@ -412,6 +382,6 @@ public class GeneSetEnrichmentAnalysis {
         }
     }
 
-    record DifferentialExpressionRecord(double fc, boolean signif) {
+    public record DifferentialExpressionRecord(double fc, boolean signif) {
     }
 }
